--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,7 @@
     <module>xchange-stream-service-core</module>
     <module>xchange-stream-service-netty</module>
     <module>xchange-stream-service-pubnub</module>
+      <module>xchange-bib</module>
   </modules>
 
   <ciManagement>
